--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "gsap": "^3.10.4",
+    "imask": "^6.4.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-text-mask": "^6.1.2",
